# FastApi-from-scracth

./: .coverage  .gitignore  LICENSE  pyproject.toml
fast_zero/: app.py  database.py  models.py  schemas.py  security.py  settings.py
fast_zero/routers/: auth.py  users.py
migrations/: env.py
migrations/versions/: 0899cae0f511_update_users_table_with_updated_at.py  0c406b67750a_create_users_table.py  3fd90e36ee28_create_users_table.py
tests/: conftest.py  test_app.py  test_auth.py  test_db.py  test_security.py  test_users.py
